--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 		<title>Nukleon Hosting</title>
 	<body>
 <h1>SERVER NOT RESPONDING</h1>
-<p>Server www.nukle-host.com/api/id?=125897455512547 is not responding </p>
+<p>Server www.nukle-host.com/api/id?=125897455512547/ip?=16*.***.***.*:**** is not responding </p>
+		<p>IP ERROR: NOT VISIBLE</p>
 <p>Try contacting us at nukleonhosting@gmail.com or on our disccord server</p>
 <p>Or try refreshing the page</p>
 <footer>Our Discord: https://dsc.gg/tbotdevelopment</footer>
+<header>NUKLEON HOSTING ERROR HANDELER</header>
 	</body>
 	</main>
 </html>
