--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 		<header>NUKLEON HOSTING CRASH HANDELER</header>
 		
 <h1>SERVER NOT RESPONDING</h1>
-		<h2>OOPS! It looks like there have been error</h2>
+		<h2>OOPS! ERROR </h2>
+<p>SERVER IS NOT RESPONDING- REASON: server www.nukle-host.com/api/id?=125897455512547/ip?=16*.***.***.*:****  is offline or changed port</p>
 <p>Server www.nukle-host.com/api/id?=125897455512547/ip?=16*.***.***.*:**** is not responding </p>
 		<p>IP ERROR: NOT VISIBLE</p>
 <p>Try contacting us at nukleonhosting@gmail.com or on our disccord server</p>
