--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<p>IP ERROR: NOT VISIBLE</p>
 <p>Try contacting us at nukleonhosting@gmail.com or on our disccord server</p>
 <p>Or try refreshing the page</p>
+		<p>Message from Nukleon Hosting owner: Hey this error is coused becouse we dont have any services up</p>
 <footer>Our Discord: https://dsc.gg/tbotdevelopment</footer>
 	</body>
 	</main>
