--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
   <section class="logo">
     <h1>Nukleon Hosting</h1>
   </section>
+  
+  <p>Starting in:</p>
 
   <!-- Countdown Timer Section -->
   <section id="countdown"></section>
