--- a/index.html
+++ b/index.html
@@ -38,6 +38,33 @@
       font-size: 2rem;
       margin-top: 2rem;
     }
+
+    /* Loading Popup Styles */
+    #loading-popup {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      justify-content: center;
+      align-items: center;
+      z-index: 999;
+    }
+
+    .loading-bar {
+      width: 50%;
+      height: 20px;
+      background-color: #ffc107;
+      margin: 0 auto;
+      border-radius: 4px;
+    }
+
+    #loading-message {
+      color: #fff;
+      margin-top: 1rem;
+    }
   </style>
 </head>
 <body>
@@ -46,7 +73,7 @@
   <header>
     <nav>
       <a href="#">Home</a>
-      <a href="#" id="panel-btn" onclick="openPanel()">PANEL</a>
+      <a href="#" id="panel-btn" onclick="simulateLoading()">PANEL</a>
     </nav>
   </header>
 
@@ -54,16 +81,38 @@
   <section class="logo">
     <h1>Nukleon Hosting</h1>
   </section>
-  
-  <p>Starting in:</p>
 
   <!-- Countdown Timer Section -->
   <section id="countdown"></section>
 
+  <!-- Loading Popup -->
+  <div id="loading-popup">
+    <div class="loading-bar"></div>
+    <div id="loading-message"></div>
+  </div>
+
   <!-- Panel Popup -->
   <script>
-    function openPanel() {
-      window.location.href = '254err.html';
+    function simulateLoading() {
+      document.getElementById('loading-popup').style.display = 'flex';
+      document.getElementById('loading-message').innerText = 'Loading...';
+
+      // Simulate loading with progress bar
+      var progressBar = document.querySelector('.loading-bar');
+      var width = 1;
+      var interval = setInterval(function() {
+        if (width >= 100) {
+          clearInterval(interval);
+          document.getElementById('loading-message').innerText = 'Something went wrong';
+          setTimeout(function() {
+            document.getElementById('loading-popup').style.display = 'none';
+            window.location.href = '254err.html';
+          }, 2000);
+        } else {
+          width++;
+          progressBar.style.width = width + '%';
+        }
+      }, 30);
     }
   </script>
 
