--- a/254err.html
+++ b/254err.html
@@ -1,18 +1,39 @@
 <html>
 	<main>
 		<title>Nukleon Hosting</title>
-	<body>
-		<header>NUKLEON HOSTING CRASH HANDELER</header>
-		
-<h1>SERVER NOT RESPONDING</h1>
-		<h2>OOPS! ERROR </h2>
-<p>SERVER IS NOT RESPONDING- REASON: server www.nukle-host.com/api/id?=125897455512547/ip?=16*.***.***.*:****  is offline or changed port</p>
-<p>Server www.nukle-host.com/api/id?=125897455512547/ip?=16*.***.***.*:**** is not responding </p>
-		<p>IP ERROR: NOT VISIBLE</p>
-<p>Try contacting us at nukleonhosting@gmail.com or on our disccord server</p>
-<p>Or try refreshing the page</p>
-		<p>Message from Nukleon Hosting owner: Hey this error is coused becouse we dont have any services up</p>
-<footer>Our Discord: https://dsc.gg/tbotdevelopment</footer>
-	</body>
+		<body>
+			<header>NUKLEON HOSTING CRASH HANDLER</header>
+
+			<h1>SERVER NOT RESPONDING</h1>
+			<h2>OOPS! ERROR </h2>
+
+			<!-- Display error messages on the webpage -->
+			<p id="errorMessage1"></p>
+			<p id="errorMessage2"></p>
+			<p id="errorMessage3"></p>
+			<p id="errorMessage4"></p>
+			<p id="errorMessage5"></p>
+			<p id="errorMessage6"></p>
+
+			<script>
+				// Log the error messages to the console
+				console.log("SERVER IS NOT RESPONDING - REASON: server www.nukle-host.com/api/id?=125897455512547/ip?=16*.***.***.*:**** is offline or changed port");
+				console.log("Server www.nukle-host.com/api/id?=125897455512547/ip?=16*.***.***.*:**** is not responding");
+				console.log("IP ERROR: NOT VISIBLE");
+				console.log("Try contacting us at nukleonhosting@gmail.com or on our discord server");
+				console.log("Or try refreshing the page");
+				console.log("Message from Nukleon Hosting owner: Hey, this error is caused because we don't have any services up");
+
+				// Display error messages on the webpage
+				document.getElementById("errorMessage1").innerHTML = "SERVER IS NOT RESPONDING - REASON: server www.nukle-host.com/api/id?=125897455512547/ip?=16*.***.***.*:**** is offline or changed port";
+				document.getElementById("errorMessage2").innerHTML = "Server www.nukle-host.com/api/id?=125897455512547/ip?=16*.***.***.*:**** is not responding";
+				document.getElementById("errorMessage3").innerHTML = "IP ERROR: NOT VISIBLE";
+				document.getElementById("errorMessage4").innerHTML = "Try contacting us at nukleonhosting@gmail.com or on our discord server";
+				document.getElementById("errorMessage5").innerHTML = "Or try refreshing the page";
+				document.getElementById("errorMessage6").innerHTML = "Message from Nukleon Hosting owner: Hey, this error is caused because we don't have any services up";
+			</script>
+
+			<footer>Our Discord: https://dsc.gg/tbotdevelopment</footer>
+		</body>
 	</main>
 </html>
