--- a/index.html
+++ b/index.html
@@ -71,6 +71,22 @@
     #loading-message {
       margin-top: 1rem;
     }
+
+    /* Sponsors Section */
+    .sponsors {
+      background-color: #333;
+      color: #fff;
+      padding: 2rem;
+    }
+
+    .sponsor {
+      margin-top: 1rem;
+    }
+
+    .sponsor img {
+      max-width: 200px;
+      max-height: 100px;
+    }
   </style>
 </head>
 <body>
@@ -98,6 +114,17 @@
     </div>
     <div id="loading-message"></div>
   </div>
+
+  <!-- Sponsors Section -->
+  <section class="sponsors">
+    <h2>Sponsors</h2>
+    <div class="sponsor">
+      <img src="https://cdn.discordapp.com/attachments/1046803911308214282/1180242288715235378/standard.gif?ex=657cb549&is=656a4049&hm=bc648be78356bb20f17bfd4899204ba951d9407f7476f3126fea886c3f3177cd&" alt="TBotDevelopment">
+    </div>
+    <div class="sponsor">
+      <img src="https://cdn.discordapp.com/attachments/1074785256378474567/1179305917485957161/33d8f2d2-b07e-4cd3-90c4-d91173a92050.gif?ex=65794d39&is=6566d839&hm=fe791f9ea376d489329f82bb4249f3fbf2773a53ea72882847a814e7d322180f&" alt="HTS Mafia">
+    </div>
+  </section>
 
   <!-- Panel Popup -->
   <script>
