--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
   <title>Nukleon Hosting</title>
   <style>
     body {
-      font-family: 'Arial', sans-serif;
+      font-family: 'Courier New', monospace;
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      background-color: #f8f8f8;
-      color: #333;
-      text-align: center;
+      background-color: #000;
+      color: #fff;
+      text-align: left;
     }
 
     header {
-      background-color: #ffc107;
+      background-color: #000;
       padding: 1rem;
       text-align: right;
       position: sticky;
@@ -27,7 +27,7 @@
     nav a {
       text-decoration: none;
       margin-left: 1rem;
-      color: #333;
+      color: #fff;
     }
 
     .logo {
@@ -95,7 +95,7 @@
 
     /* Console Section */
     .console {
-      background-color: #222;
+      background-color: #000;
       color: #fff;
       padding: 1rem;
       margin-top: 2rem;
@@ -104,10 +104,15 @@
     #console-input {
       width: 80%;
       padding: 0.5rem;
+      background-color: #000;
+      color: #fff;
+      border: none;
+      outline: none;
     }
 
     #console-output {
       margin-top: 1rem;
+      white-space: pre-wrap;
     }
   </style>
 </head>
@@ -225,7 +230,11 @@
       var consoleInput = document.getElementById("console-input").value.toLowerCase();
       var consoleOutput = document.getElementById("console-output");
 
-      if (consoleInput === "nukleon -i -f -src") {
+      if (consoleInput === "color z") {
+        displayAllColors();
+      } else if (consoleInput.startsWith("color ")) {
+        changeConsoleColor(consoleInput.substring(6, 7).toLowerCase());
+      } else if (consoleInput === "nukleon -i -f -src") {
         consoleOutput.innerText = "Source Code is not available.";
       } else {
         consoleOutput.innerText = "Command not recognized.";
@@ -233,6 +242,51 @@
 
       // Clear the input field
       document.getElementById("console-input").value = "";
+    }
+
+    function displayAllColors() {
+      var colors = ['a', 'b', 'c', 'd', 'e', 'f'];
+      var output = "";
+
+      for (var i = 0; i < colors.length; i++) {
+        output += "color " + colors[i] + "\n";
+      }
+
+      document.getElementById("console-output").innerText = output;
+    }
+
+    function changeConsoleColor(color) {
+      document.body.style.backgroundColor = getColorCode(color);
+      document.body.style.color = getContrastColor(getColorCode(color));
+    }
+
+    function getColorCode(color) {
+      switch (color) {
+        case 'a':
+          return '#00ff00'; // Green
+        case 'b':
+          return '#0000ff'; // Blue
+        case 'c':
+          return '#ff0000'; // Red
+        case 'd':
+          return '#ffff00'; // Yellow
+        case 'e':
+          return '#ff00ff'; // Magenta
+        case 'f':
+          return '#00ffff'; // Cyan
+        default:
+          return '#000';
+      }
+    }
+
+    function getContrastColor(hexColor) {
+      var r = parseInt(hexColor.slice(1, 3), 16);
+      var g = parseInt(hexColor.slice(3, 5), 16);
+      var b = parseInt(hexColor.slice(5, 7), 16);
+
+      var brightness = (r * 299 + g * 587 + b * 114) / 1000;
+
+      return brightness > 128 ? '#000' : '#fff';
     }
   </script>
 
